--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "Saksham Jain",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.8.0",
-    "mongoose": "^8.4.5"
+    "mongoose": "^8.4.5",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
